preload fonts, made the backend request static, put frontend on port 80

--- a/PartyMasterFrontend/index.html
+++ b/PartyMasterFrontend/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/x-icon" href="/icon@4x.png">
   </head>
   <body>
+    <div class="fontloaderhiddendiv" style='display: none; font-family: "Material Symbols Rounded";'>text</div>
+    <div class="fontloaderhiddendiv" style='display: none; font-family: "Lexend";'>text</div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
